--- a/web project1/profile.html
+++ b/web project1/profile.html
@@ -7,7 +7,7 @@
   <title>online portfolio</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<link rel="stylesheet" href="web project1/style.css">
+<link rel="stylesheet" href="./style.css">
 
 
 </head>
